--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,12 @@
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
+    {% comment %}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
+    {% endcomment %}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}{{ currentLang }}">{{ site.title | escape }}</a>
 
+    {% comment %}
     {%- if page_paths -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -32,5 +35,6 @@
         </div>
       </nav>
     {%- endif -%}
+    {% endcomment %}
   </div>
 </header>
