--- a/assets/main.css
+++ b/assets/main.css
@@ -483,3 +483,14 @@ hr {
   border: 0 transparent;
   border-top: solid 1px #ddd;
 }
+
+.lang-options {
+    margin-top: 10px;
+}
+
+.lang-options ul {
+    list-style: inside none;
+    margin-left: 10px;
+    margin-bottom: 0;
+    display: inline-block;
+}
