--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,34 +8,34 @@
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
-    {% comment %}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    {% endcomment %}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}{{ currentLang }}">{{ site.title | escape }}</a>
+    {%- comment -%}
+        {%- assign page_paths = site.header_pages | default: default_paths -%}
+    {%- endcomment -%}
+    <a class="site-title" rel="author" href="{{ '/' | relative_url }}{{ currentLang }}">{{ site.title | escape }}</a>
 
-    {% comment %}
-    {%- if page_paths -%}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
+    {%- comment -%}
+        {%- if page_paths -%}
+          <nav class="site-nav">
+            <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+            <label for="nav-trigger">
+              <span class="menu-icon">
+                <svg viewBox="0 0 18 15" width="18px" height="15px">
+                  <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
+                </svg>
+              </span>
+            </label>
 
-        <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
-        </div>
-      </nav>
-    {%- endif -%}
-    {% endcomment %}
+            <div class="trigger">
+              {%- for path in page_paths -%}
+                {%- assign my_page = site.pages | where: "path", path | first -%}
+                {%- if my_page.title -%}
+                    <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                {%- endif -%}
+              {%- endfor -%}
+            </div>
+          </nav>
+        {%- endif -%}
+    {%- endcomment -%}
   </div>
 </header>
 
@@ -46,41 +46,43 @@
         {%- assign currentLang = page.lang -%}
     {%- endunless -%}
 
-    {%- if page.layout != 'home' -%}
-        {%- assign posts=site.posts | where:"lang-ref", page.lang-ref | sort: 'lang' -%}
-        {%- if posts.size == 0 -%}
-            {%- assign posts=site.pages | where:"lang-ref", page.lang-ref | sort: 'lang' -%}
-        {%- endif -%}
-        {%- if posts.size > 1 -%}
-            <div class="wrapper lang-options">
-                <em>{{ site.data.translations['differentPostLanguage'][page.lang] }}:</em>
-                <ul>
-                    {%- for post in posts -%}
-                        {%- if post.lang != currentLang -%}
-                            <li>
-                                <a href="{{ site.base-url }}{{ post.url }}" class="{{ page.lang }}" title="View in {{ site.data.languages[post.lang].label }}">
-                                {{ site.data.languages[post.lang].icon }} {{ site.data.languages[post.lang].label }}
-                                </a>
-                            </li>
-                        {%- endif -%}
-                    {%- endfor -%}
-                </ul>
-            </div>
-        {%- endif -%}
-    {%- else -%}
+    {%- if page.layout == 'home' -%}
         <div class="wrapper lang-options">
             <em>{{ site.data.translations['differentLanguage'][currentLang] }}:</em>
             <ul>
                 {%- for lang in site.data.languages -%}
                     {%- if lang[0] != currentLang -%}
-                        <li>
-                            <a href="{{ site.base-url }}/{{ lang[0] }}" class="{{ lang[0] }}" title="View in {{ lang[1].label }}">
-                                {{ lang[1].icon }} {{ lang[1].label }}
-                            </a>
-                        </li>
+                    <li>
+                        <a href="{{ site.base-url }}/{{ lang[0] }}" class="{{ lang[0] }}" title="View in {{- lang[1].label }}">
+                            {{- lang[1].icon }} {{- lang[1].label -}}
+                        </a>
+                    </li>
                     {%- endif -%}
                 {%- endfor -%}
             </ul>
         </div>
+    {%- else -%}
+        {%- assign alternativeposts = site.posts | where: "lang-ref", page['lang-ref'] | sort: 'lang' -%}
+
+        {%- if alternativeposts.size > 1 -%}
+            {%- assign hasPosts = false -%}
+            <div class="wrapper lang-options">
+                <ul>
+                    {%- for post in posts -%}
+                        {%- if post.lang != currentLang and post['lang-ref'] == page['lang-ref'] -%}
+                            {%- assign hasPosts = true -%}
+                            <li>
+                                <a href="{{ site.base-url }}{{ post.url }}" class="{{ page.lang }}" title="View in {{- site.data.languages[post.lang].label }}">
+                                    {{- site.data.languages[post.lang].icon }} {{ site.data.languages[post.lang].label }} ({{ post.title }})
+                                </a>
+                            </li>
+                        {%- endif -%}
+                    {%- endfor -%}
+                </ul>
+                {%- if hasPosts -%}
+                    <em>{{ site.data.translations['differentPostLanguage'][page.lang] }}:</em>
+                {%- endif -%}
+            </div>
+        {%- endif -%}
     {%- endif -%}
 </div>
